# school-portal

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  seed.py  start.sh
.github/workflows/: ci.yml
.railway/: railway.ts
app/: __init__.py  config.py
app/models/: __init__.py  attendance.py  class_.py  risk.py  score.py  subject.py  user.py
app/routes/: admin.py  attendance.py  auth.py  dashboard.py  decorators.py  reports.py  risk.py  scores.py
app/services/: celery_app.py  celerybeat_schedule.py  pdf_generator.py  risk_predictor.py  tasks.py
app/templates/admin/: class_form.html  classes.html  user_form.html  users.html
app/templates/attendance/: attendance.html
app/templates/auth/: login.html
app/templates/dashboard/: admin.html  student.html  teacher.html
app/templates/layouts/: base.html
app/templates/reports/: report.html  report_card_pdf.html
app/templates/risk/: class_risk.html
app/templates/scores/: scores.html
migrations/versions/: 4a8caf6c7271_initial_migration.py
tests/: conftest.py  test_auth.py  test_models.py  test_routes.py
