[project]
name = "school-portal"
version = "1.0.0"
description = "School Result & Attendance Portal"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "SIM"]
ignore = ["S101", "S104", "S311", "N806"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
